# witnesser

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  __main__.py  audio_codec_name.py  audio_file_extension.py  audio_output_path.py  extract_audio.py  ffmpeg_probe.py  ffmpeg_stream.py  hash_digest.py  main.py  save_audio.py  save_video_probe.py
