[tool.poetry]
name = "witnesser"
version = "0.0.1"
description = "Automatic speech recognition (ASR) implementation"
authors = ["Andreas Stassivik <andreas@stassi.net>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
ffmpeg-python = "^0.2.0"
llvmlite = "^0.44.0"
numba = "^0.61.2"
openai-whisper = "20240930"
python = "~3.11"
torch = { version = "*", source = "pytorch" }
torchaudio = { version = "*", source = "pytorch" }
torchvision = { version = "*", source = "pytorch" }
yt-dlp = "2025.5.22"

[[tool.poetry.source]]
name = "pytorch"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu124"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
